--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 
 *.backup1
+Event sheets/eCamera.uistate.xml
+Event sheets/eEffects.uistate.xml
+Event sheets/eEnemies.uistate.xml
+Event sheets/eLevelZero.uistate.xml
+Event sheets/eMario.uistate.xml
+Layouts/LevelZero.uistate.xml
+Newer Super Mario Forever.uistate.xml
